--- a/src/DanielsToolbox/DanielsToolbox.csproj
+++ b/src/DanielsToolbox/DanielsToolbox.csproj
@@ -40,21 +40,6 @@
     <None Update="dt.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Lib\Microsoft.ApplicationInsights.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Lib\Microsoft.Crm.Sdk.Proxy.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Lib\Microsoft.PowerPlatform.Tooling.BatchedTelemetry.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Lib\Microsoft.Xrm.Sdk.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Lib\SolutionPackagerLib.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -62,7 +47,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="dt-dd $(ProjectDir)" />
+    <Exec Command="dt-dd &quot;$(ProjectDir)&quot;" />
   </Target>
 
 </Project>
