Added method to synchronize flows

--- a/src/DanielsToolbox/DanielsToolbox.csproj
+++ b/src/DanielsToolbox/DanielsToolbox.csproj
@@ -40,6 +40,9 @@
     <None Update="dt.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Lib\Microsoft.Xrm.Sdk.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
