Added new tool to transition workitems in devops via a query

--- a/src/DanielsToolbox/DanielsToolbox.csproj
+++ b/src/DanielsToolbox/DanielsToolbox.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="0.4.21" />
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client.Dynamics" Version="0.4.21" />
+    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="16.170.0" />
     <PackageReference Include="ShellProgressBar" Version="5.1.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21216.1" />
     <PackageReference Include="System.ComponentModel.Composition" Version="5.0.0" />
